First post on fluentd!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,10 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <p class="navbar-text" id="navbar_name">stephanie liu</p>
+          <a class="navbar-brand" href="http://stephanieliu.net">stephanie liu</p>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <p class="navbar-text"> about </p>
+          <li><a href="http://stephanieliu.net/about">about</a></li>
         </ul>
       </div>
     </nav>
