Footer for contact info, style changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,13 @@
 ---
 ---
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/application.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/octicons/octicons.css">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
@@ -21,4 +23,11 @@
     </nav>
     {{ content }}
   </body>
+  <hr>
+    <div class="container text-center">
+      <h4>Connect with me!</h4>
+      <a href="http://github.com/sliuu"><div id="connect"><span class="octicon octicon-mark-github"></span>  Github</div></a>
+      <a href="mailto:sliu14@outlook.com"><div id="connect"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Email</div></a>
+      <a href="https://www.linkedin.com/in/stephanieliu14"><div id="connect"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  LinkedIn </div></a>
+    </div>
 </html>
