Finish up part 2 of fluentd, update navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,15 +12,15 @@
 
   <body>
     <nav class="navbar navbar-default">
-      <div class="container-fluid">
+      <div class="container container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="http://stephanieliu.net">stephanie liu</p>
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="http://stephanieliu.net/about">about</a></li>
         </ul>
-      </div>
     </nav>
+    </div>
     {{ content }}
   </body>
   <hr>
