--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,24 +1,12 @@
 ---
+layout: default
 ---
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}css/application.css">
-    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
-  </head>
-
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <p class="navbar-text" id="navbar_name">stephanie liu</p>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <p class="navbar-text"> about </p>
-        </ul>
-      </div>
-    </nav>
+<div class="container">
+  <div class="page-header">
+    <h2> {{ page.title }} </h2>
+  </div>
+  <div class="jumbotron">
     {{ content }}
-  </body>
-</html>
+  </div>
+</div>
