--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,7 +4,7 @@ layout: default
 <!DOCTYPE html>
 <div class="container">
   <div class="page-header">
-    <h2> {{ page.title }} </h2>
+    <h2> {{ page.title }} <small> {{ page.date || date: '%B %d, %Y' }} </small></h2>
   </div>
   <div class="jumbotron">
     {{ content }}
