shouldn't hard-code the url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,9 +20,9 @@
       <div class="navbar-header">
         <div class="container container-fluid">
           <ul class="nav navbar-nav">
-            <li><a class="navbar-brand navbar-left" href="http://stephanieliu.me">stephanie liu</a></li>
-            <li><a class="navbar-right" href="http://stephanieliu.me/about">about</a></li>
-            <li><a class="navbar-right" href="http://stephanieliu.me/feed.xml">feed</a></li>
+            <li><a class="navbar-brand navbar-left" href="{{ site.baseurl }}/">stephanie liu</a></li>
+            <li><a class="navbar-right" href="{{ site.baseurl }}/about">about</a></li>
+            <li><a class="navbar-right" href="{{ site.baserul }}/feed.xml">feed</a></li>
           </ul>
         </div>
       </div>
