--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
         <div class="container container-fluid">
           <ul class="nav navbar-nav">
             <li><a class="navbar-brand navbar-left" href="{{ site.baseurl }}/">stephanie liu</a></li>
+            <li><a class="navbar-right" href="{{ site.baseurl }}/csci376">csci376</a></li>
+            <li><a class="navbar-right" href="{{ site.baseurl }}/hciproject">hci project page</a></li>
             <li><a class="navbar-right" href="{{ site.baseurl }}/about">about</a></li>
             <li><a class="navbar-right" href="{{ site.baserul }}/feed.xml">feed</a></li>
           </ul>
